basic sizing tweak to showcase to make sure that all project tags are visible

--- a/src/components/PortfolioShowcase/ps-details.module.css
+++ b/src/components/PortfolioShowcase/ps-details.module.css
@@ -8,6 +8,8 @@
 .details-wrap-show {
     height: var(--showcase-height);
     z-index: 1;
+    padding-top: 1rem;
+    transition: var(--transition-all-03);
 }
 
 .details-title {
