--- a/src/components/PortfolioShowcase/ps-slider.module.css
+++ b/src/components/PortfolioShowcase/ps-slider.module.css
@@ -42,14 +42,14 @@
 .preview-image-wrap {
   position: relative;
   display: block;
-  height: 85%;
+  height: 65%;
   /* background: var(--black-fade-3); */
   border-radius: var(--radius-lg);
   cursor: pointer;
 }
 
 .gatsby-image, .gatsby-image img {
-  height: 100%;
+  height: 90%;
   border-radius: var(--radius-lg);
   transition: var(--transition-all-05);
 }
@@ -57,7 +57,7 @@
 .tags-wrap {
   display: flex;
   flex-wrap: wrap;
-  margin-top: var(--space-2xl);
+  margin-top: 0;
   transition: var(--transition-all-05);
 }
 
